# SEKURO_TUGAS_1_Maharani-Puan-Satira_PROGRAMMING

src/oop_soal_1/: core_mcu.cpp  core_mcu.hpp
src/oop_soal_2_bonus/: mcu.cpp  mcu.hpp  mcu_cam_controller.cpp  mcu_cam_controller.hpp  mcu_walker.cpp  mcu_walker.hpp
src/ros_soal_1/: CMakeLists.txt  package.xml
src/ros_soal_1/src/: publisher.cpp  subscriber.cpp
src/soal_cmake/: CMakeLists.txt
src/soal_cmake/include/: robot.hpp  robotair.hpp
src/soal_cmake/src/: robot.cpp  robotair.cpp
src/stl_soal/: main.cpp
